--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -1,8 +1,7 @@
 #page {
   background-image: url(https://images.unsplash.com/photo-1512693674172-47fbe52487bc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80);
 }
-.navBar {
-}
+
 .NamePlate {
   font-family: "Playball", cursive;
   padding-top: 15px;
@@ -15,7 +14,7 @@ ul {
   list-style-type: none;
   margin: 5px;
   padding: 15px;
-  justify-content: space-evenly;
+  justify-content: space-between;
   background: rgb(206, 115, 206);
   color: black;
 }
@@ -36,5 +35,4 @@ li {
 .myPic {
   height: 260px;
   width: 200px;
-  
 }
